0.8.5 - March 19, 2004
- Support now for the ALSA 1.0 API
- Can build with --disable-esd option again
- Minor build fixes
- ALSA mmap() mode can be enabled/disabled at runtime using "use_mmap"
  option.
- Patch to OSS plugin to fix skipping issues with some drivers
  (like emu10k1).

0.8.4 - October 4, 2003
- Added AIX sound driver from Stefan Tibus <sjti@gmx.net>
- Committed some fixes from the Fink project to allow compiling on
  OS X (still with all the dlcompat stuff)
- Improvements in plugin detection code by David Walser, especially
  when ESD or aRts are present.
- NAS plugin from Antoine Mathys.
- Portability fixes for various platforms (including dlopen() bugs) 
  including HP-UX and *BSD.
- Memory/resource leak fixes
- Significant fixes to ALSA 0.9.x plugin by Kevin Cody, Jr.  This
  should fix stuttering audio for mpg321 users.  The
  --enable-alsa09-mmap option to ./configure turns on memory-mapped
  I/O.  Note this is an experimental feature and causes some problems
  with some sound card drivers and also users of the dmix software mixer.

0.8.3 - July 2002
- fix to ao.m4 macro
- minor alsa09 plugin updates
- fixes to irix plugin

0.8.2 - December 2001
- alsa09 plugin updated

0.8.0 - August 2000
- Major API rewrite.  Old apps and plugins will not work with this library!
- Default driver detection now works.
- /etc/libao.conf and ~/.libao config files now supported, see libao.conf man
  page for details.
- WAV files can now be piped to non-picky applications.  (Please don't
  complain if this fails.  You shouldn't be using be using WAV for this
  anyway.)
- Various portability fixes for Solaris and *BSD.

0.7.0 - June 2000
- minor build fixes for different platforms

0.6.0 - December 2000
- slight api modification with ao_append_option()
- fixed an option leak

0.5.0 - November 2000
- first official release under the Xiphophorus projects
