@@ -344,6 +344,19 @@ fi
 AC_SUBST(NAS_CFLAGS)
 AC_SUBST(NAS_LIBS)
 
+dnl Check for polyp
+
+AC_ARG_ENABLE(polyp, [  --enable-polyp       include Polypaudio output plugin ],
+[ BUILD_POLYP="$enableval" ],[ BUILD_POLYP="yes" ])
+
+have_polyp=no
+if test "x$BUILD_POLYP" = "xyes" ; then
+    PKG_CHECK_MODULES(POLYP, [ polyplib-simple >= 0.6 ],have_polyp=yes)
+    AC_SUBST(POLYP_LIBS)
+    AC_SUBST(POLYP_CFLAGS)
+fi
+
+AM_CONDITIONAL(HAVE_POLYP,test "x$have_polyp" = xyes)
 
 dnl Orphaned driver.  We'll probably dump it soon.
 AM_CONDITIONAL(HAVE_SOLARIS,test "x$have_solaris" = xyes)
@@ -352,4 +365,4 @@ dnl Plugins get special LDFLAGS
 AC_SUBST(PLUGIN_LDFLAGS)
 
 
-AC_OUTPUT(Makefile src/Makefile doc/Makefile include/Makefile include/ao/Makefile include/ao/os_types.h src/plugins/Makefile src/plugins/esd/Makefile src/plugins/oss/Makefile src/plugins/alsa/Makefile src/plugins/alsa09/Makefile src/plugins/sun/Makefile src/plugins/irix/Makefile src/plugins/arts/Makefile src/plugins/macosx/Makefile src/plugins/nas/Makefile debian/Makefile ao.pc)
+AC_OUTPUT(Makefile src/Makefile doc/Makefile include/Makefile include/ao/Makefile include/ao/os_types.h src/plugins/Makefile src/plugins/esd/Makefile src/plugins/oss/Makefile src/plugins/alsa/Makefile src/plugins/alsa09/Makefile src/plugins/sun/Makefile src/plugins/irix/Makefile src/plugins/arts/Makefile src/plugins/macosx/Makefile src/plugins/nas/Makefile src/plugins/polyp/Makefile debian/Makefile ao.pc)
