@@ -1,3 +1,7 @@
+svn - 2004
+- Added Polypaudio driver(libao-polyp 0.4) 
+  from Lennart Poettering <mzyvonbcbylc (at) 0pointer (dot) de>
+
 0.8.5 - March 19, 2004
 - Support now for the ALSA 1.0 API
 - Can build with --disable-esd option again
